<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Title -->
        <TextView
            android:text="@string/license_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:background="@color/colorPrimaryLight"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Glide -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:text="@string/license_glide_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Title" />
            <TextView
                android:text="@string/license_glide_github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web" />
            <TextView
                android:text="@string/license_glide_license"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web" />

        </LinearLayout>

        <!-- Retrofit -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:text="@string/license_retrofit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Title" />
            <TextView
                android:text="@string/license_retrofit_github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web" />
            <TextView
                android:text="@string/license_retrofit_license"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web" />

        </LinearLayout>

        <!-- Gson -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:text="@string/license_gson_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Title" />
            <TextView
                android:text="@string/license_gson_github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web" />

        </LinearLayout>

        <!-- ButterKnife -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:text="@string/license_butterknife_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Title" />
            <TextView
                android:text="@string/license_butterknife_github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web" />
            <TextView
                android:text="@string/license_butterknife_license"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>