<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MovieDetailActivity"
    tools:showIn="@layout/activity_movie_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorBackground">

        <!-- Header -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">

                <!-- Poster image -->
                <ImageView
                    android:id="@+id/iv_md_poster"
                    android:layout_width="135dp"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:background="@android:color/darker_gray"
                    android:contentDescription="@string/image_description_poster"
                    android:scaleType="fitXY" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:orientation="vertical">

                    <!-- Release date -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/movie_detail_release_date" />

                    <TextView
                        android:id="@+id/tv_md_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="14sp" />

                    <!-- Rating -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/movie_detail_vote_average" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/tv_md_vote_average"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:text="@string/movie_detail_max_rating" />
                    </LinearLayout>

                    <!-- Favorite -->
                    <ImageView
                        android:id="@+id/iv_favorite"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/selector_favorite_button"
                        android:clickable="true"
                        android:onClick="onFavoriteButtonClicked" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <!-- Synopsis -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:text="@string/movie_detail_synopsis" />

                <TextView
                    android:id="@+id/tv_md_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="16sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>



        <!-- Cast -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:text="@string/movie_detail_cast" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_cast_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:id="@+id/ll_cast_loading_state"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_cast_not_found"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:text="@string/cast_not_found" />

                    <ProgressBar
                        android:id="@+id/pb_cast_loading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <!-- Videos -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:text="@string/movie_detail_trailer" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_video_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:id="@+id/ll_video_loading_state"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_video_not_found"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:text="@string/video_not_found" />

                    <ProgressBar
                        android:id="@+id/pb_video_loading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <!-- Reviews -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:text="@string/movie_detail_review" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_review_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:id="@+id/ll_review_loading_state"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_review_not_found"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:text="@string/review_not_found" />

                    <ProgressBar
                        android:id="@+id/pb_review_loading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>